--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
+    <string-array name="account_types">
+        <item>User</item>
+        <item>Seller</item>
+    </string-array>
+
 </resources>
